clusters/xs4/kube/dashboard/vikunja/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vikunja-service
spec:
  selector:
    app: vikunja
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3456
